--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,59 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5z6po0gDf0z6l7g9SPIEptLjg8F7f4Cx3b7VATQz"
-    crossorigin="anonymous"
-  />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register</title>
+  <link rel="stylesheet" href="register.css">
 </head>
-<form>
-    <style>
-        .validation-message {
-          font-size: 14px;
-          color: red;
-          margin-top: 5px;
-        }
-      </style>
-      
+<body>
+  <div class="container">
+    <h1>Register</h1>
+    <form id="registrationForm" action="/register" method="POST">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" onblur="checkUsername()" required>
+        <div id="usernameMessage" class="validation-message"></div>
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" onblur="checkEmail()" required>
+        <div id="emailMessage" class="validation-message"></div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <i class="fas fa-eye toggle-password" toggle-target="password"></i>
+      </div>
+      <div class="form-group">
+        <label for="passwordConfirm">Confirm Password:</label>
+        <input type="password" id="passwordConfirm" name="passwordConfirm" required>
+        <i class="fas fa-eye toggle-password" toggle-target="passwordConfirm"></i>
+      </div>
+      <div class="form-group">
+        <label for="invitationCode">Invitation Code:</label>
+        <input type="text" id="invitationCode" name="invitationCode" required>
+      </div>
+      <button type="submit">Register</button>
+    </form>
+    <ul id="passwordValidationMessage"></ul>
+  </div>
 
-    <h2>Register</h2>
-    <form id="registrationForm" action="/register" method="POST"></form>
-<form action="/register" method="POST">
-  <div class="form-group">
-    <input type="text" id="username" name="username" onblur="checkUsername()" required>
-    <label for="username">Username:</label>
-    <div id="usernameMessage" class="validation-message"></div>
-  </div>
-  <div class="form-group">
-    <input type="email" id="email" name="email" onblur="checkEmail()" required>
-    <label for="email">Email:</label>
-    <div id="emailMessage" class="validation-message"></div>
-  </div>
-  <div class="form-group">
-    <input type="password" id="password" name="password" required>
-    <label for="password">Password:</label>
-    <i class="fas fa-eye toggle-password" toggle-target="password"></i>
-  </div>
-  <div class="form-group">
-    <input type="password" id="passwordConfirm" name="passwordConfirm" required>
-    <label for="passwordConfirm">Confirm Password:</label>
-    <i class="fas fa-eye toggle-password" toggle-target="passwordConfirm"></i>
-  </div>
-  
-  <div class="form-group">
-    <input type="text" id="invitationCode" name="invitationCode" required>
-    <label for="invitationCode">Invitation Code:</label>
-  </div>
-  <button type="submit">Register</button>
-</form>
-</form>
-<ul id="passwordValidationMessage" style="color: red; list-style: none; padding: 0;"></ul>
+  <script src="https://kit.fontawesome.com/1234567890.js" crossorigin="anonymous"></script>
 
 
 <script>
